documentation/refactor: modify all controllers to use global definition for responses of validation errors
