# backend/src/controllers/getBeehiveById.js
@@ -18,6 +18,9 @@ async function getBeehiveById(req, res, next) {
   #swagger.responses[200] = {
     description: 'Sent beehive (object) to client.',
   }
+  #swagger.responses[400] = {
+    $ref: "#/definitions/validationErrorResponse"
+  }
 */
   try {
     //validar q el id es de naturaleza numerica
