# backend/src/controllers/loginUser.js
@@ -10,19 +10,18 @@ async function loginUser(req, res, next) {
 /**
   #swagger.auto = false
   #swagger.tags = ['Users']
-  #swagger.description = 'Process login requests.'
+  #swagger.description = 'Processes login requests.'
   #swagger.requestBody = {
-    description: 'Request body containing users email and password (encrypted).',
+    description: 'Must provide email and password (encrypted).',
     schema: { $ref: "#/definitions/userCredentialsSchema" }  
   }
   #swagger.responses[200] = {
-    description: 'User logged in succesfully; sent JWT token to client.',
-    schema: { $ref: "#/definitions/loginUser200ResponseSchema" }
+    description: 'Login succesfull; sent JWT token to client.',
+    schema: { $ref: "#/definitions/response20Schema" }
   }
   #swagger.responses[400] = {
-    description: 'Login failed: body does not match data schema.',
-    schema: { $ref: "#/definitions/errorSchema" }
-  } 
+    $ref: "#/definitions/validationErrorResponse"
+  }
   #swagger.responses[401] = {
     description: 'Login failed: user and/or password are incorrect or unregistered.',
     schema: { $ref: "#/definitions/errorSchema" }
@@ -54,7 +53,7 @@ async function loginUser(req, res, next) {
     });
 
     res.status(200).send({
-      message: "Login completed",
+      message: "Login succesfull; sent JWT token to client",
       payload: { userToken: `Bearer ${token}` },
     });
   } catch (error) {
