# backend/src/dataValidationSchemas/response200Schema.js
@@ -2,10 +2,10 @@ const Joi = require("joi");
 const j2s = require("joi-to-swagger");
 
 const response200Schema = Joi.object({
-  message: Joi.string().required(),
+  message: Joi.string(),
   payload: Joi.object({}),
 });
 
-const { swagger: response200SchemaSwagger } = j2s(loginUser200ResponseSchema);
+const { swagger: response200SchemaSwagger } = j2s(response200Schema);
 
-module.exports = { response200Schema, response200SchemaSwagger: response200SchemaSwagger };
+module.exports = { response200Schema, response200SchemaSwagger };
